[package]
name = "multiproof-rs"
version = "0.1.0"
authors = ["Guillaume Ballet <gballet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.8.2"
rlp = "0.4.2"
hex = "0.3.2"
serde_json = "1.0.40"

[dev-dependencies]
hex = "0.3.2"
